syntax = "proto3";

package ping.dto;

option php_namespace = "GRPC\\Ping";
option php_metadata_namespace = "GRPC\\Ping\\GPBMetadata";

import "google/protobuf/timestamp.proto";

service MailerService {
    rpc SendMail (ping.dto.SendMailRequest) returns (ping.dto.SendMailResponse) {
    }
}

message SendMailRequest {
    string from = 1;
    string to = 2;
    string subject = 3;
    string body = 4;
    google.protobuf.Timestamp deadline = 5;
}

message SendMailResponse {
}
